corrected page alignment

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #FAFAFA
+    background-color: #FAFAFA;
+    text-align: center;
 }
 
 #dagJsonInput {
